--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
     "@mui/styled-engine-sc": "^5.12.0",
+    "aos": "^2.3.4",
     "flowbite": "^1.6.6",
     "flowbite-react": "^0.4.7",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-awesome-button": "^7.0.5",
     "react-awesome-reveal": "^4.2.3",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.0",
+    "react-icons": "^4.9.0",
     "react-router-dom": "^6.13.0",
     "react-ui-scrollspy": "^2.3.0",
     "sort-by": "^1.2.0",
