--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@react-pdf/renderer": "^3.1.12",
     "aos": "^2.3.4",
+    "firebase": "^9.23.0",
     "flowbite": "^1.6.6",
     "flowbite-react": "^0.4.7",
     "localforage": "^1.10.0",
@@ -27,11 +29,14 @@
     "react-awesome-reveal": "^4.2.3",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.0",
+    "react-hook-form": "^7.45.0",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.13.0",
+    "react-toastify": "^9.1.3",
     "react-ui-scrollspy": "^2.3.0",
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.11",
+    "sweetalert2": "^11.7.12",
     "typewriter-effect": "^2.20.1"
   },
   "devDependencies": {
